# Labs-at-LiU

./: README.md
TBMI26 - Neural Networks and Learning Systems (Spring 2018)/: README.md
TBMI26 - Neural Networks and Learning Systems (Spring 2018)/Assignment1/: calcAccuracy.m  calcConfusionMatrix.m  evaluate_MultiLayer.m  evaluate_SingleLayer.m  evaluate_kNN.m
TBMI26 - Neural Networks and Learning Systems (Spring 2018)/Assignment3/: main.ipynb  test.py  train.py
TDDC17 - Artificial Intelligence (Autumn 2017)/: .gitignore  README.md
TDDC17 - Artificial Intelligence (Autumn 2017)/Lab1/: README.md
TDDC17 - Artificial Intelligence (Autumn 2017)/Lab4/: shakey_domain.pddl  shakey_problem.pddl
TDDC78 - Programming of Parallel Computers (Spring 2018)/: .gitignore  README.md
TDDC78 - Programming of Parallel Computers (Spring 2018)/Lab2_pthreads/CPPTest/: CMakeLists.txt  Makefile.sgi  Makefile_triolith  blurfilter.cpp  blurfilter.h  blurmain.cpp  run_thresc.sh  test_blurc.sh  test_thresc.sh  thresfilter.cpp  thresfilter.h  thresmain.cpp
TDDC78 - Programming of Parallel Computers (Spring 2018)/Lab3_openmp/: CMakeLists.txt  FindOpenMP.cmake  Makefile  Makefile_triolith  a.out  lab3_result.txt  laplsolv  laplsolv.cpp
TDDC78 - Programming of Parallel Computers (Spring 2018)/Lab4_particlesim/: CMakeLists.txt  Lab4.R  Makefile  coordinate.h  definitions.h  main.cpp  main_sequential.cpp  particlesim  physics.cpp  physics.h  run.sh  run.sh~
TDDC78 - Programming of Parallel Computers (Spring 2018)/Lab4_particlesim/sequential.dSYM/Contents/: Info.plist
TDDC78 - Programming of Parallel Computers (Spring 2018)/Lab4_particlesim/sequential.dSYM/Contents/Resources/DWARF/: sequential
TDDE01 - Machine Learning (Autumn 2017)/: .gitignore
TDDE01 - Machine Learning (Autumn 2017)/Lab1/: assignment1.R  assignment3.R
TDDE01 - Machine Learning (Autumn 2017)/Lab2/: assignment1.R
TND004 - Datastructures (Spring 2017)/: .gitignore  README.md
TND004 - Datastructures (Spring 2017)/Lab1/: #Exerc1.cpp#  Ex3.docx  Exerc1.cpp  exerc1_out.txt
TND004 - Datastructures (Spring 2017)/Lab2/: main.cpp  set (1).cp  set.cpp  set.h
TND004 - Datastructures (Spring 2017)/Lab3/: BinarySearchTree.h  exercise4.cpp  test1.cpp  test3.cpp  test4.cpp
TNM048 - Information Visualization (Spring 2018)/: README.md
TNM048 - Information Visualization (Spring 2018)/Lab2/: index.html
TNM048 - Information Visualization (Spring 2018)/Lab3/: index.html
TNM087- Image Processing and Analysis (Autumn 2016)/Task1/: BasicImageInfo.m
TNM087- Image Processing and Analysis (Autumn 2016)/Task3/: EllipticMask.m  Task3EllipticMask.m  tEST.m
TNM087- Image Processing and Analysis (Autumn 2016)/Task4/: WhitePoint.m  WhitePoint.mat  tEST.m
TNM087- Image Processing and Analysis (Autumn 2016)/Task5/: GammaCoins.mat  GammaCorrection.m  TESTFIL.m
TNM098 - Advanced Visual Data Analysis (Spring 2018)/: .gitignore  README.md
(+150 files in other folders)
